<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    style="@style/layout_match"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sptechindia.redit_assignment.AccountActivity">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewSkipNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/skipNow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="0dp"
        android:layout_marginBottom="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonLogin_welcome"
            style="@style/buttonColoredStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@android:color/white"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonRegister_welcome"
            style="@style/buttonColoredStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="@android:color/white"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
